# SATySFi-class-SLyDIFi-theme-hachioji

./: .gitignore  Makefile  Satyristes  satysfi-class-slydifi-theme-hachioji-doc.opam  satysfi-class-slydifi-theme-hachioji.opam
doc/: slydifi.saty
src/: hachioji.satyh
