opam-version: "2.0"
name: "satysfi-class-slydifi-theme-hachioji"
version: "0.1.0"
synopsis: "A SLyDIFi theme class"
description: """
A SLyDIFi theme class.
"""

maintainer: "Tatsumi Gamou <tatsumigamou@yahoo.co.jp>"
author: "Tatsumi Gamou <tatsumigamou@yahoo.co.jp>"
license: "MIT"
homepage: "https://github.com/gamoutatsumi/satysfi-class-slydifi-theme-hachioji"
bug-reports: "https://github.com/gamoutatsumi/satysfi-class-slydifi-theme-hachioji"
dev-repo: "git+https://github.com/gamoutatsumi/satysfi-class-slydifi-theme-hachioji.git"

depends: [
  "satysfi" {>= "0.0.6" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
  "satysfi-enumitem" {>= "2.0.0"}
  "satysfi-figbox" {>= "0.1.1"}
  "satysfi-base" {>= "1.0.0"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "class-slydifi-theme-hachioji"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
